--- a/OpenAI/Chat_to_Github/manifest.json
+++ b/OpenAI/Chat_to_Github/manifest.json
@@ -3,7 +3,10 @@
   "name": "Python Code Uploader",
   "version": "1.0",
   "description": "Uploads generated Python code to a private GitHub repo.",
-  "permissions": ["storage", "https://api.github.com/", "activeTab"],
+  "permissions": ["storage", "https://api.github.com/", "activeTab", "identity"],
+  "oauth2": {
+    "scopes": ["https://www.googleapis.com/auth/userinfo.email"]
+  },
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
